testing/fail-lbnf/214-superfluous-character.err
Lower case rule labels need a definition.
ERROR: undefined rule label(s):
  fail-lbnf/214-superfluous-character.cf:1:15: x
Aborting. (Use option --force to continue despite errors.)
