testing/fail-lbnf/214-superfluous-character.cf
A. S ::= "A"; x -- Here is a superfluous character
B. S ::= "B";
